# devs-fmu

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  environment.yml  get_FMUs.py  get_FMUs.sh  get_fmu.py  get_fmus.py  requirements-conda.txt  requirements.txt
OpenModelica-Scripts/: bouncingBall.mos
OpenModelica/scripts/: bouncingBall.mos  check_template.py  translateModelFMU.mos.template
c-api/: CMakeLists.txt  environment.yml  fetch.sh  main.c  main.cpp  run.sh
c-api/envs/: environment.yml
c-api/lib/: .gitignore
c-api/lib/patches/: cmake.patch
c-api/patches/: CMakeLists.txt  cmake.patch
devs-fmu/: bouncing_ball.py  simulator.py
devs_fmu/: bouncing_ball.py  simulator.py
envs/: environment.yml  test-environment.yml
notebooks/: bouncing_ball.ipynb  openmodelica-fmu.ipynb  reference-fmu.ipynb
paper/image-sources/implementation/: architectural-design.drawio  devs-fmu-python-api.drawio  fmi-sequence.drawio  python-implementation-architecture.drawio
paper/image-sources/physical-simulation/: capacitor-discharge-code.drawio
paper/images/FMU-architecture/: FMU-architecture.drawio
paper/images/continuous-simulation/: CapacitorDischargeCode.mo  CapacitorDischargeGraphical.mo  capacitor-discharge-numerical.py  capacitor-discharge-plot.py  continuous-system.drawio
paper/images/discrete-simulation/: traffic-light.drawio
paper/overleaf/: conference_101719.tex  references.bib
python-api/: README.md  config.py  environment.yml
python-api/devs_fmu/: bouncing_ball.py
python-api/envs/: environment.yml  test-environment.yml
python-api/notebooks/: check_imports.py  comparsion.ipynb  openmodelica-fmu.ipynb  reference-fmu.ipynb
python-api/tests/: README.md  conftest.py  test_openmodelica_fmu.py  test_reference_fmu.py  test_simulator.py
tests/: README.md  conftest.py  test_bouncing_ball.py  test_openmodelica_fmu.py
